removed alignLeft class fro mwebsitestye since it is no longer used

--- a/css/WebsiteStyle.css
+++ b/css/WebsiteStyle.css
@@ -25,10 +25,6 @@
   color:#D3D3D3;
 }
 
-.alignLeft {
-  text-align:left;
-}
-
 .modal-content {
   background:rgba(255,255,255,.95)
 }
